direction endpoints
