# api/internal/dto/direction.go
@@ -1,0 +1,6 @@
+package dto
+
+type Direction struct {
+	ID   uint   `json:"id"`
+	Name string `json:"name"`
+}
